--- a/styles/index.css
+++ b/styles/index.css
@@ -7,3 +7,11 @@ html, body {
     margin: 0;
     padding: 0;
 }
+
+.App {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
